Add option for chossing the number of blocks

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <script src="code.js" defer></script>
 </head>
 <body>
+    <div class="userInput">
+        <p class="prompt">Enter the size of Grid</p>
+        <input type="text" class="input" placeholder="Range: 1-100">
+        <button class="submit">Submit</button>
+    </div>
     <div class="container">
     </div>
 </body>
